tests/NormalTests/paczka1/fuzzy1/71195105.err
Error in line 3: gklp9tR S302 83,3
Error in line 9: kMpu S302 52,0
Error in line 21: Q9nIjM S73 63,2
